Proper solution to flicker and footer fixed position

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,6 +27,3 @@ span.custom-button-icon {
   margin-top:25px;
   text-align: center;
 }
-/* Footer fixed to bottom of page */
-[data-role=page]{height: 100% !important; position:relative !important;}
-[data-role=footer]{bottom:0; position:absolute !important; top: auto !important; width:100%;}
